--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,14 @@
 .MuiAlert-message :last-child {
     padding-bottom: 0;
 }
+
+/*
+    Can be used like so to bold the numbers of the list below
+
+    <div className="boldOrderedListBelow" />
+
+    1. **Who can use BadgerCompute?**
+*/
+.boldOrderedListBelow + ol li::marker {
+  font-weight: bold;
+}
